[tool.poetry]
package-mode = false
name = "ml visual"
version = "0.1.0"
description = ""
authors = ["markeholland@hotmail.co.uk"]

[tool.poetry.dependencies]
python = ">3.9,<3.13"
scikit-learn = "1.1.3"
pandas = "^2.2.3"
numpy = "1.26.4"
shap = "0.46.0"
xgboost = "2.0.3"
ydata-profiling = ">4.12.0"
pytest = ">8.3.3"
data-drift-detector = "0.0.18"
wordcloud = "1.9.4"
missingno = "0.5.2"
watermark = "2.5.0"
seaborn = "0.13.2"
loguru = "0.7.2"
matplotlib = "3.9.2"
ipykernel = "6.29.5"
nltk = "3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
